python crash: bpy.context.screen.is_animation_playing #42619

Closed
opened 2014-11-16 21:23:59 +01:00 by Jacques Lucke · 7 comments
Member

System Information
Windows 7, Nvidia Quadro 600

Blender Version
Broken: Blender 2.72 c6ab67b (latest built)

Short description of error
I'm currently working on the Animation Nodes Addon and noticed that Blender crashes when I want to load another file.

Exact steps for others to reproduce the error

  1. Open the text editor
  2. Copy this script in a new text block:
import bpy

class TestTree(bpy.types.NodeTree):
	bl_idname = "test_tree"
	bl_label = "Animation";
	bl_icon = "X"
	
	def update(self):
		print(bpy.context.screen.is_animation_playing)
		
bpy.utils.register_class(TestTree)

bpy.data.node_groups.new("test", "test_tree").use_fake_user = True
  1. Run the script.
  2. Save the current file (and leave Blender open!)
  3. Open the just saved file -> crash
**System Information** Windows 7, Nvidia Quadro 600 **Blender Version** Broken: Blender 2.72 c6ab67b (latest built) **Short description of error** I'm currently working on the [Animation Nodes Addon ](http://blenderartists.org/forum/showthread.php?350296-Addon-Animation-Nodes) and noticed that Blender crashes when I want to load another file. **Exact steps for others to reproduce the error** 1. Open the text editor 2. Copy this script in a new text block: ``` import bpy class TestTree(bpy.types.NodeTree): bl_idname = "test_tree" bl_label = "Animation"; bl_icon = "X" def update(self): print(bpy.context.screen.is_animation_playing) bpy.utils.register_class(TestTree) bpy.data.node_groups.new("test", "test_tree").use_fake_user = True ``` 3. Run the script. 4. Save the current file (and leave Blender open!) 5. Open the just saved file -> crash
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

Added subscriber: @Leon95

Added subscriber: @Leon95

Can confirm on Ubuntu Linux 14.04, Blender 2.72.2 080c1d4
/tmp/untitled.crash.txt :

 backtrace
./blender() [0x8ff138]
/lib/x86_64-linux-gnu/libc.so.6(+0x36c30) [0x7f898a4c1c30]
./blender(ED_screen_animation_playing+0) [0xb9be50]
./blender(Screen_is_animation_playing_get+0x1a) [0x10b210a]
./blender(RNA_property_boolean_get+0x41) [0xff2021]
./blender(pyrna_prop_to_py+0xdb) [0xcaf03b]
./blender() [0xcaf1ef]
/usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalFrameEx+0x43bd) [0x7f898e092eed]
/usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalCodeEx+0x886) [0x7f898e1bd516]
/usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(+0x225b46) [0x7f898e1bdb46]
/usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyObject_Call+0x68) [0x7f898e0d2458]
./blender() [0xcae3ee]
./blender() [0x107ce27]
./blender(ntreeUpdateTree+0xa7) [0xf45d57]
./blender() [0x110d202]
./blender(blo_read_file_internal+0x1d3) [0x111a8a3]
./blender(BLO_read_from_file+0x29) [0x110a639]
./blender(BKE_read_file+0x36) [0xe8f766]
./blender(WM_file_read+0x12c) [0x90b8cc]
./blender() [0x9149c3]
./blender() [0x90723a]
./blender() [0x907694]
./blender() [0xaa0b64]
./blender() [0xab0ece]
./blender() [0x908a00]
./blender() [0x908d38]
./blender(wm_event_do_handlers+0x1c7) [0x909057]
./blender(WM_main+0x18) [0x901208]
./blender(main+0xd87) [0x8eb0f7]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7f898a4acec5]
./blender() [0x8fea84]
Can confirm on Ubuntu Linux 14.04, Blender 2.72.2 080c1d4 `/tmp/untitled.crash.txt` : ``` backtrace ./blender() [0x8ff138] /lib/x86_64-linux-gnu/libc.so.6(+0x36c30) [0x7f898a4c1c30] ./blender(ED_screen_animation_playing+0) [0xb9be50] ./blender(Screen_is_animation_playing_get+0x1a) [0x10b210a] ./blender(RNA_property_boolean_get+0x41) [0xff2021] ./blender(pyrna_prop_to_py+0xdb) [0xcaf03b] ./blender() [0xcaf1ef] /usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalFrameEx+0x43bd) [0x7f898e092eed] /usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyEval_EvalCodeEx+0x886) [0x7f898e1bd516] /usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(+0x225b46) [0x7f898e1bdb46] /usr/lib/x86_64-linux-gnu/libpython3.4m.so.1.0(PyObject_Call+0x68) [0x7f898e0d2458] ./blender() [0xcae3ee] ./blender() [0x107ce27] ./blender(ntreeUpdateTree+0xa7) [0xf45d57] ./blender() [0x110d202] ./blender(blo_read_file_internal+0x1d3) [0x111a8a3] ./blender(BLO_read_from_file+0x29) [0x110a639] ./blender(BKE_read_file+0x36) [0xe8f766] ./blender(WM_file_read+0x12c) [0x90b8cc] ./blender() [0x9149c3] ./blender() [0x90723a] ./blender() [0x907694] ./blender() [0xaa0b64] ./blender() [0xab0ece] ./blender() [0x908a00] ./blender() [0x908d38] ./blender(wm_event_do_handlers+0x1c7) [0x909057] ./blender(WM_main+0x18) [0x901208] ./blender(main+0xd87) [0x8eb0f7] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7f898a4acec5] ./blender() [0x8fea84]

This issue was referenced by 28d9641a3d

This issue was referenced by 28d9641a3d441f6f15083e7d601216b351a4a7c3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 28d9641a3d.

Closed by commit 28d9641a3d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42619
No description provided.