Fix T42619: python crash: bpy.context.screen.is_animation_playing